testsuite/tests/properties/invalid_set/test.out
== contains_other_type/test.lkt ==
test.lkt:8:22: error: Expected type Int, got Bool
8 |         set.contains(true)
  |                      ^^^^


== not_hashable/test.lkt ==
test.lkt:5:53: error: Element type (here Token) must be hashable
5 |     fun test(): Bool = node.token_start.singleton().to_set()
  |                                                     ^^^^^^


== two_type_params/test.lkt ==
test.lkt:4:29: error: Set expects one type argument: the element type
4 |     @external() fun test(): Set[Int, Bool]
  |                             ^^^^^^^^^^^^^^


lkt_compile: Done
